# mock-fastq-generator

./: .gitignore  LICENSE  README.md  fastq_generator.py  parameters_example.json  pyproject.toml  requirements.txt  ruff.toml  template_example.fasta  utils.py
.github/workflows/: pages.yml  test.yml
examples/: decay_models_demo.ipynb  example1.sh  example2.sh
output/: example1.fastq  example2.fastq
public/: app.js  core.js  index.html  style.css
scripts/: generate_three_panel_figure.py
src/mock_fastq_generator/: __init__.py  cli.py  core.py  io.py
tests/: test_fastp_integration.py  test_fastq_format.py  test_gzip_output.py  test_io.py  test_paired_end.py  test_phred_boundaries.py  test_sequence_lengths.py
